--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/harvest"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/liblinearbinary"/>
+	<classpathentry kind="lib" path="lib/berkeleyParser.jar"/>
+	<classpathentry kind="lib" path="lib/edu.mit.jwi_2.1.5_jdk.jar"/>
+	<classpathentry kind="lib" path="/harvest/lib/trove-2.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
