--- a/clearsrl/.classpath
+++ b/clearsrl/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/harvest"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/liblinearbinary"/>
-	<classpathentry kind="lib" path="lib/berkeleyParser.jar"/>
-	<classpathentry kind="lib" path="lib/edu.mit.jwi_2.1.5_jdk.jar"/>
-	<classpathentry kind="lib" path="/harvest/lib/trove-2.1.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/clearcommon"/>
+	<classpathentry kind="lib" path="/clearcommon/lib/trove-2.1.0.jar"/>
+	<classpathentry kind="lib" path="/clearcommon/lib/edu.mit.jwi_2.1.5_jdk.jar"/>
+	<classpathentry kind="lib" path="/clearcommon/lib/berkeleyParser.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
