--- a/clearcommon/.classpath
+++ b/clearcommon/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/blas.jar"/>
 	<classpathentry kind="lib" path="lib/liblinearbinary.jar"/>
+	<classpathentry kind="lib" path="lib/berkeleyParser.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
