Minor fixes/update (ParseCorpus multi-threaded, ant build include debugging, fixes wordnet not finding a stem)

--- a/clearcommon/build.xml
+++ b/clearcommon/build.xml
@@ -5,7 +5,7 @@
 
     <target name="compile" depends="clean">
         <mkdir dir="build"/>
-        <javac srcdir="src" destdir="build">
+        <javac srcdir="src" destdir="build" debug="true">
         	<classpath>
         		<pathelement location="lib/blas.jar"/>
         	    <pathelement location="lib/liblinearbinary.jar"/>	
