--- a/clearcommon/build.xml
+++ b/clearcommon/build.xml
@@ -11,6 +11,7 @@
         	    <pathelement location="lib/liblinearbinary.jar"/>	
         	    <pathelement location="lib/trove-2.1.0.jar"/>
         		<pathelement location="lib/berkeleyParser.jar"/>
+        		<pathelement location="lib/edu.mit.jwi_2.1.5_jdk.jar"/>
         	</classpath>
         </javac>
     </target>
