--- a/clearsrl/build.xml
+++ b/clearsrl/build.xml
@@ -12,6 +12,7 @@
         	    <pathelement location="../clearcommon/lib/liblinearbinary.jar"/>   
         	    <pathelement location="../clearcommon/lib/trove-2.1.0.jar"/>
         		<pathelement location="../clearcommon/lib/args4j-2.0.18.jar"/>
+        		<pathelement location="../clearcommon/lib/edu.mit.jwi_2.1.5_jdk.jar"/>
         		<pathelement location="../clearcommon/bin/clearcommon.jar"/>
         	</classpath>
     	</javac>
