--- a/clearsrl/build.xml
+++ b/clearsrl/build.xml
@@ -16,6 +16,16 @@
         		<pathelement location="../clearcommon/bin/clearcommon.jar"/>
         	</classpath>
     	</javac>
+        <javac srcdir="test" destdir="build" debug="true">
+        	<classpath>
+        		<pathelement location="../clearcommon/lib/blas.jar"/>
+        	    <pathelement location="../clearcommon/lib/liblinearbinary.jar"/>   
+        	    <pathelement location="../clearcommon/lib/trove-2.1.0.jar"/>
+        		<pathelement location="../clearcommon/lib/args4j-2.0.18.jar"/>
+        		<pathelement location="../clearcommon/lib/edu.mit.jwi_2.1.5_jdk.jar"/>
+        		<pathelement location="../clearcommon/bin/clearcommon.jar"/>
+        	</classpath>
+    	</javac>   	
     </target>
 
     <target name="jar" depends="compile">
