--- a/clearcommon/.classpath
+++ b/clearcommon/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="lib" path="lib/trove-2.1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/blas.jar"/>
-	<classpathentry kind="lib" path="lib/liblinearbinary.jar"/>
+	<classpathentry kind="lib" path="lib/liblinearbinary.jar" sourcepath="/home/shumin/workspace/liblinearbinary/src"/>
 	<classpathentry kind="lib" path="lib/berkeleyParser.jar"/>
 	<classpathentry kind="lib" path="lib/edu.mit.jwi_2.1.5_jdk.jar"/>
 	<classpathentry kind="lib" path="lib/args4j-2.0.18.jar"/>
