--- a/clearcommon/.classpath
+++ b/clearcommon/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="lib/berkeleyParser.jar"/>
 	<classpathentry kind="lib" path="lib/edu.mit.jwi_2.1.5_jdk.jar"/>
 	<classpathentry kind="lib" path="lib/args4j-2.0.18.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
