--- a/clearcommon/build.xml
+++ b/clearcommon/build.xml
@@ -13,6 +13,7 @@
         		<pathelement location="lib/berkeleyParser.jar"/>
         		<pathelement location="lib/args4j-2.0.18.jar"/>
         		<pathelement location="lib/edu.mit.jwi_2.1.5_jdk.jar"/>
+        		<pathelement location="lib/xercesImpl.jar"/>
         	</classpath>
         </javac>
     </target>
