changing jar file name of clearcommon & clearsrl build

--- a/clearcommon/pom.xml
+++ b/clearcommon/pom.xml
@@ -49,6 +49,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>clearcommon-${version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
