--- a/clearsrl/pom.xml
+++ b/clearsrl/pom.xml
@@ -28,6 +28,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>clearsrl-${version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
