--- a/clearcommon/pom.xml
+++ b/clearcommon/pom.xml
@@ -43,6 +43,11 @@
 			<version>r32</version>
 		</dependency>
 		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
