forgot to commit the changed files

--- a/config/clearsrl.properties
+++ b/config/clearsrl.properties
@@ -9,7 +9,6 @@ chinese.util-class = edu.colorado.clear.common.util.ChineseUtil
 chinese.headrules = ${CLEARSRL_HOME}/data/chinese/headrules.txt
 chinese.frame_dir = ${CLEARSRL_HOME}/data/chinese/frames.zip
 
-
 # OntoNotes 5 English
 on5-en.tb.dir = ${HOME}/corpora/ontonotes-release-5.0/data/english/annotations
 on5-en.tb.regex =.*\\.parse\\z
@@ -25,6 +24,8 @@ on5-en.parse.filelist = ${HOME}/ontonotes/train.id
 srl.language = english 
 
 srl.model_file = ${HOME}/cryo-srl/models/cyro.C0.1-prob.model
+
+srl.train.saveFrameMap = false
 
 srl.train.corpus = cryo-train
 srl.train.corpus.source = PARSE, TREEBANK, PROPBANK
@@ -84,5 +85,10 @@ srl.score.labels = ARG0,ARG1,ARG2,ARG3,ARG4,ARG5,\
                    ARGM-EXT,ARGM-FRQ,ARGM-LOC,ARGM-LVB,ARGM-MNR,ARGM-MOD,ARGM-NEG,\
                    ARGM-PNC,ARGM-PRD,ARGM-PRP,ARGM-REC,ARGM-TMP,ARGM-TPC
 
+srl.score.gold.pbdir=${HOME}/corpora/cryosphere-srl
+srl.score.gold.pb.regex=.*\\.prop\\z
+srl.score.gold.tbdir=${HOME}/corpora/cryosphere-srl
+
+srl.score.systems=cryo-gold, onto-gold
 
 
