--- a/clearcommon/pom.xml
+++ b/clearcommon/pom.xml
@@ -48,6 +48,11 @@
 			<version>2.11.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
